--- a/app/views/users/dashboard/_new_writer.html.erb
+++ b/app/views/users/dashboard/_new_writer.html.erb
@@ -38,6 +38,10 @@
           <p>If you are looking for some additional inspiration, visit the <a target="_blank" href="https://docs.google.com/spreadsheets/d/1I-za5WKWPTQWiC2sAGBHZbjsOjb74EUZgvCAfQ4dU9I/edit?usp=sharing">Community Group Brainstorm</a> or the <a target="_blank" href="https://www.facebook.com/groups/615063885673363/">Facebook group</a>.</p>
         </div>
         <div class="dashboard--articles--wrapper">
+          <% if @user_pitches.present? %>
+            <h6 class="header_ttl">Your Pitches</h6>
+            <%= render "/users/partials/dashboard_pitches", pitches: @user_pitches, image: "waiting.png" %>
+          <% end %>
           <% if @user_posts.rejected.present? %>
             <h6 class="header_ttl">Changes Requested</h6>
             <%= render "/users/partials/dashboard_articles", articles: @user_posts.rejected, image: "changes_requested.png" %>
@@ -68,7 +72,10 @@
           <%= link_to("Change Password", edit_user_registration_path) %>
           <%= link_to("Review Onboarding", onboarding_path(:page => "welcome")) %>
           <%= link_to("Editor Pitches", pitches_path) %>
-          <%= link_to "Start a new article", new_post_path(@post) %>
+          <%= link_to "Pitch a new article", new_pitch_path %>
+          <% if current_user.admin? %>
+            <%= link_to "Start a new article", new_post_path %>
+          <% end %>
           <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
         </div>
       </div>
