--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -19,21 +19,20 @@
     <div class="sidebar_menu hide_menu" style="background-color: #65B19D;">
       <i class="fa fa-times"></i>
       <h1><%= link_to "The Teen Magazine", root_path %></h1>
-      <a href="/categories/student-life">Student Life</a>
-      <a href="/categories/wellness">Wellness</a>
-      <a href="/categories/beauty-style">Beauty & Style</a>
-      <a href="/categories/culture">Culture</a>
-      <a href="/categories/relationships">Relationships</a>
-      <a href="/categories/lifestyle">Lifestyle</a>
-      <a href="/categories/opinion">Opinion</a>
-      <a href="/contacts/new">Contact</a>
+      <%= link_to "Dashboard", user_path(current_user) %>
       <% if user_signed_in? %>
-         <%= link_to "Create", pitches_path %>
+         <%= link_to("Editor Pitches", pitches_path) %>
+         <%= link_to "Pitch a new article", new_pitch_path %>
+         <%= link_to("Edit Profile", edit_user_path(current_user)) %>
+         <%= link_to("Change Password", edit_user_registration_path) %>
+         <%= link_to("Review Onboarding", onboarding_path(:page => "welcome")) %>
+         <% if current_user.admin? %>
+           <%= link_to "Start a new article", new_post_path %>
+         <% end %>
          <% if current_user && (current_user.admin? || current_user.editor?) %>
            <%= link_to "Edit", reviews_path %>
            <%= link_to "Writers", users_path %>
          <% end %>
-         <%= link_to "Dashboard", user_path(current_user) %>
          <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
       <% else %>
          <a href="/apply">Apply</a>
