--- a/app/views/pitches/show.html.erb
+++ b/app/views/pitches/show.html.erb
@@ -1,6 +1,9 @@
 <h1 id="page_title"><%= @title %></h1>
 <div class="skinny_wrapper wrapper_padding">
   <% if @claimed_user.nil? %>
+    <% if @pitch.status.eql? "Ready for Review" %>
+      <p><b><i>This pitch has not been reviewed yet.</i></b></p>
+    <% end %>
     <i>When you claim an article idea, the pitch will show up as claimed in your dashboard, and a new draft will be started. You will have <b>two weeks</b> to submit your article for review after claiming the pitch.</i>
   <% else %>
     <% @post_reviews = Post.where(user_id: @pitch.claimed_id, pitch_id: @pitch.id).last.reviews.last %>
@@ -21,6 +24,15 @@
   <% end %>
   <h3 class="pitch_ttl"><%= @pitch.title %></h3>
   <p class="pitch_usr">Pitched by <%= link_to(@pitch.user.full_name, @pitch.user, class: "pitch_btn") %> under <%= link_to(@pitch.category.name, @pitch.category, class: "pitch_btn") %></p>
+  <% if @pitch.status.eql? "Approved" %>
+    <p style="background-color: yellow; display: inline-block;">This pitch was approved! You may claim it to start your draft.</p><br>
+  <% elsif @pitch.status.eql? "Rejected" %>
+    <p style="background-color: yellow; display: inline-block;">This pitch was not approved.</p><br>
+    <% if @pitch.notes.present? %>
+      <i>Editor Notes:</i>
+      <%= @pitch.notes %><br>
+    <% end %>
+  <% end %>
   <%= image_tag(@pitch.thumbnail, class: "thumbnail_img") %>
   <%= markdown @pitch.description %>
   <% if @pitch.requirements.present? %>
@@ -28,22 +40,29 @@
     <%= markdown @pitch.requirements %>
   <% end %>
 
-  <% if @claimed_user.nil? %>
-    <%= form_for @post do |f| %>
-      <%= f.hidden_field :title, value: @pitch.title %>
-      <%= f.hidden_field :content, value: @pitch.description %>
-      <%= f.hidden_field :category_id, value: @pitch.category_id %>
-      <%= f.hidden_field :pitch_id, value: @pitch.id %>
-      <%= f.submit "Claim Article Pitch", data: { confirm: "You will have two weeks to write and submit this article." } %>
-    <% end %>
-  <% else %>
-    <p class="pitch_usr">Claimed by <%= link_to(@claimed_user.full_name, @claimed_user, class: "pitch_btn") %> on <%= @article.created_at.strftime('%A, %B %d') %></p>
-    <% if @claimed_user.id == current_user.id || current_user.admin? %>
-      <%= form_for @pitch do |f| %>
-        <%= f.hidden_field :claimed_id, value: nil %>
-        <p class="pitch_usr">Go to this pitch's <%= link_to("article", @article, class: "pitch_btn") %>.<br>Note: If you unclaim this pitch, any writer will be able to claim it. The associated article will become locked unless you claim the pitch again.</p>
-        <%= f.submit "Unclaim Pitch", data: { confirm: "Are you sure you want to unclaim this pitch? You will no longer be able to work on this article." }  %>
+  <% if (!@pitch.status.eql? "Rejected") && (!@pitch.status.eql? "Ready for Review") %>
+    <% if @claimed_user.nil? %>
+      <%= form_for @post do |f| %>
+        <%= f.hidden_field :title, value: @pitch.title %>
+        <%= f.hidden_field :content, value: @pitch.description %>
+        <%= f.hidden_field :category_id, value: @pitch.category_id %>
+        <%= f.hidden_field :pitch_id, value: @pitch.id %>
+        <%= f.submit "Claim Article Pitch", data: { confirm: "You will have two weeks to write and submit this article." } %>
+      <% end %>
+    <% else %>
+      <p class="pitch_usr">Claimed by <%= link_to(@claimed_user.full_name, @claimed_user, class: "pitch_btn") %> on <%= @article.created_at.strftime('%A, %B %d') %></p>
+      <% if @claimed_user.id == current_user.id || current_user.admin? %>
+        <%= form_for @pitch do |f| %>
+          <%= f.hidden_field :claimed_id, value: nil %>
+          <p class="pitch_usr">Go to this pitch's <%= link_to("article", @article, class: "pitch_btn") %>.<br>Note: If you unclaim this pitch, any writer will be able to claim it. The associated article will become locked unless you claim the pitch again.</p>
+          <%= f.submit "Unclaim Pitch", data: { confirm: "Are you sure you want to unclaim this pitch? You will no longer be able to work on this article." }  %>
+        <% end %>
       <% end %>
     <% end %>
   <% end %>
+
+  <% if @pitch.user.id.eql? current_user.id %>
+    <%= link_to "Delete", pitch_path(@pitch), method: :delete, data: {confirm: "Are you sure you want to delete this pitch? This cannot be undone."}, :class => "pitch_btn delete_btn" %>
+  <% end %>
+  <br>
 </div>
