--- a/app/views/pitches/_form.html.erb
+++ b/app/views/pitches/_form.html.erb
@@ -36,7 +36,7 @@
       <%= f.file_field :thumbnail %>
     </div>
 
-    <% if current_user.editor? && @pitch.nil? %>
+    <% if current_user.editor? && @pitch.title.nil? %>
       <%= f.check_box :assign_if_not_claimed, style: "display: inline;" %>
       <span>Automatically assign this pitch to a writer if it's not claimed in two weeks.</span><br><br>
     <% elsif current_user.editor? %>
