small wording changes

--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -8,7 +8,7 @@ pintrk('track', 'pagevisit');
 <div class="apply_wrapper">
   <h2>Apply to the TTM Writer Team!</h2>
   <p>We are a group of young college and high school writers who work with one another to improve journalism skills,
-    gain writing experience, and receive quality feedback from top-tier student journalists. We hope you join our team!</p>
+    gain writing experience, and receive quality feedback from top-tier student journalists.</p>
 <h2>What will you gain from being a writer for The Teen Magazine?</h2>
 <p>As a writer for The Teen Magazine, you will get the opportunity to:  </p>
 <ul>
