--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -14,6 +14,9 @@
       </div>
     </div>
   <% end %>
+  <% if @submitted_pitches.count.eql? 0 %>
+    <i>You don't have any articles that you're editing right now.</i>
+  <% end %>
   <h3 class="pitch_ttl">Article submissions</h3>
   <div class="flex-wrapper">
     <% @submitted_for_review.each do |draft| %>
@@ -52,6 +55,7 @@
     <% end %>
     <% if @submitted_pitches.count.eql? 0 %>
       <i>There are no submitted pitches right now. Check back in a few days!</i>
+      <br>
     <% end %>
   </div>
   <% if current_user.admin? %>
