--- a/app/views/layouts/article.html.erb
+++ b/app/views/layouts/article.html.erb
@@ -72,7 +72,7 @@
       <a href="/categories/culture">Culture</a>
       <a href="/categories/relationships">Relationships</a>
       <a href="/categories/lifestyle">Lifestyle</a>
-      <a href="/categories/opinion">Opinion</a>
+      <a href="/categories/op-ed">Op-Ed</a>
       <a href="/contacts/new">Contact</a>
       <% if user_signed_in? %>
          <%= link_to "Create", pitches_path %>
@@ -112,7 +112,7 @@
             <a href="/categories/culture">Culture</a>
             <a href="/categories/relationships">Relationships</a>
             <a href="/categories/lifestyle">Lifestyle</a>
-            <a href="/categories/opinion">Opinion</a>
+            <a href="/categories/op-ed">Op-Ed</a>
             <% if user_signed_in? %>
                <%= link_to "Create", pitches_path, class: "link" %>
                <% if current_user && (current_user.admin? || current_user.editor?) %>
