--- a/app/views/users/dashboard/_new_writer.html.erb
+++ b/app/views/users/dashboard/_new_writer.html.erb
@@ -62,7 +62,7 @@
           <%= render "/users/partials/dashboard_articles", articles: @user_posts.draft, image: "saved.png" %>
         </div>
         <br />
-        <div class="btn_cntnr"><%= link_to "Claim a Pitch", pitches_path, class: "newpost--new--profile" %></div>
+        <div class="btn_cntnr"><%= link_to "Pitch an Article", new_pitch_path, class: "newpost--new--profile" %></div>
       </div>
     </div>
     <div class="dashboard--writer--flex--two">
