--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -46,7 +46,7 @@
             </div>
           </div>
         </div>
-        <div class="btn_cntnr"><%= link_to "Claim a Pitch", pitches_path, class: "newpost--new--profile" %></div>
+        <div class="btn_cntnr"><%= link_to "Pitch an Article", new_pitch_path, class: "newpost--new--profile" %></div>
         <br>
         <div class="dashboard--articles--wrapper">
           <% if @user_pitches.present? %>
