changes requested instead of rejected

--- a/app/views/posts/_banner_status.html.erb
+++ b/app/views/posts/_banner_status.html.erb
@@ -5,6 +5,7 @@
     <% @banner_color = "#F2D600" %>
   <% elsif @most_recent_review.status == "Rejected" %>
     <% @banner_color = "#EB5946" %>
+    <% @message = "Changes Requested" %>
   <% else %>
     <% @banner_color = "#00A9FF" %>
   <% end %>
