--- a/app/views/analytics/index.html.erb
+++ b/app/views/analytics/index.html.erb
@@ -21,7 +21,7 @@
           <td <% if !(@top_percent.class.eql? String) %><% if (@top_percent < 25) %> style= "font-weight: bolder;" <% end %><% else %>style= "font-weight: bolder;"<% end %>><%= @top_percent %>%</td>
           <% @category = Category.find(post.category_id) %>
           <td><%= @category.name %></td>
-          <% @posts_by_impressions_category = @category.posts %>
+          <% @posts_by_impressions_category = @category.posts.published.order("post_impressions desc") %>
           <% @top_percent_category = ((@posts_by_impressions_category.index(post).to_f / @posts_by_impressions_category.count.to_f) * 100).round(1) %>
           <% @top_percent_category = (@top_percent_category < 0.1 ) ? "< 0.1" : @top_percent_category %>
           <td <% if !(@top_percent_category.class.eql? String) %><% if (@top_percent_category < 25) %> style= "font-weight: bolder;" <% end %><% else %>style= "font-weight: bolder;"<% end %>><%= @top_percent_category %>%</td>
