submitting articles bug fixes

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -14,7 +14,7 @@
       </div>
     </div>
   <% end %>
-  <% if @submitted_pitches.count.eql? 0 %>
+  <% if @editors_reviews.count.eql? 0 %>
     <i>You don't have any articles that you're editing right now.</i>
   <% end %>
   <h3 class="pitch_ttl">Article submissions</h3>
