updated email and name to Khushi

--- a/app/views/application_mailer/article_published.html.erb
+++ b/app/views/application_mailer/article_published.html.erb
@@ -13,7 +13,7 @@
     <p><%= link_to @post.title, @post, style: "color: #65B19D;" %> was just published!</p>
     <img style="display: block; max-width: 100%; width: 400px; margin: 0 auto;" src=<%= images[rand(0..2)] %>>
     <p>Our editors loved your article! You can now view your published article on <%= link_to "The Teen Magazine", @post, :style => "color: #65B19D;" %> and share it with your friends!</p>
-    <p>As always, if you have any questions, please do not hesitate to send me an email. Congratulations!</p>
+    <p>As always, if you have any questions, please do not hesitate to send us an email. Congratulations!</p>
     <p>Best,<br/>Mia</p>
   </body>
 </html>
