--- a/app/views/application_mailer/profile_approved.html.erb
+++ b/app/views/application_mailer/profile_approved.html.erb
@@ -9,8 +9,8 @@
 
   <body>
     <p>Hi <%= @user.first_name %>,</p>
-    <p>This is Mia from The Teen Magazine. I wanted to let you know that your profile was just approved by one of our editors,
+    <p>This is Khushi from The Teen Magazine. I wanted to let you know that your profile was just approved by one of our editors,
        and you are now eligible to submit articles for publication! Log into your account here: <bold style="color: #65B19D;"><a href="https://www.theteenmagazine.com/login">theteenmagazine.com/login</a></bold> to see the changes.</p>
-    <p>Best,<br/>Mia</p>
+    <p>Best,<br/>Khushi</p>
   </body>
 </html>
