--- a/app/views/pages/criteria.html.erb
+++ b/app/views/pages/criteria.html.erb
@@ -51,7 +51,7 @@
   <p>Right now, only editors can pitch article topics.</p>
 
   <p class="question">How can I become an editor?</p>
-  <p>Email miajohansson@college.harvard.edu.</p>
+  <p>Email editors@theteenmagazine.com.</p>
 
   <p class="question">How can I change my password? </p>
   <p>You can change your password  <a target="_blank" href="/users/edit">here</a>.</p>
@@ -62,7 +62,7 @@
     can ask the influencer to share your article once it has been published.</p>
 
   <p class="question">Have a question that wasn't answered here?</p>
-  <p>Email Mia at miajohansson@college.harvard.edu or message one of the editors in the <a href="https://www.facebook.com/groups/615063885673363/">Facebook group</a>.</p>
+  <p>Email us at editors@theteenmagazine.com or message one of the editors in the <a href="https://www.facebook.com/groups/615063885673363/">Facebook group</a>.</p>
 
   <p>Read "<a href="/choosing-a-topic">Choosing A Topic</a>" Next →</p>
 </div>
