--- a/app/views/application_mailer/first_article_published.html.erb
+++ b/app/views/application_mailer/first_article_published.html.erb
@@ -20,8 +20,7 @@
       <p>You are not signed up yet to receive monthly article assignments. If this is a mistake, you can change your preferences to receive monthly article assignments
          on your <%= link_to "profile edit page", @user, :style => "color: #65B19D;" %>.</p>
     <% end %>
-    <p>As always, if you have any questions, please do not hesitate to send me an email. Congratulations!</p>
-    <p>Best Regards,<br/>Mia Johansson</p>
-    <p>Editor in Chief</p>
+    <p>As always, if you have any questions, please do not hesitate to send us an email. Congratulations!</p>
+    <p>Best Regards,<br/>Editor Team</p>
   </body>
 </html>
