--- a/app/views/pages/writing.html.erb
+++ b/app/views/pages/writing.html.erb
@@ -99,7 +99,7 @@
 
   <hr />
   <p>
-    If you're confused about any of this styling, or want to do something specific, you can email Mia at <b>miajohansson@college.harvard.edu</b>
+    If you're confused about any of this styling, or want more clarification, you can send an inquiry to <b>editors@theteenmagazine.com</b>
   </p>
 
   <p>Read "<a href="/finding-images">Finding Images</a>" Next →</p>
