--- a/app/views/users/dashboard/_new_writer.html.erb
+++ b/app/views/users/dashboard/_new_writer.html.erb
@@ -34,8 +34,8 @@
             <li>Once you've finished your first article, you can submit it for review though the article form. Our amazing editors will look it over and give you
             feedback.</li>
           </ol>
-          <p>If you have your own article idea that fits our audience, you can <%= link_to("start a new article", new_post_path) %> instead. Please not that your article may not be approved if the content is not relevant to our teenage audience. </p>
-          <p>If you are looking for some additional inspiration, visit the <a target="_blank" href="https://docs.google.com/spreadsheets/d/1I-za5WKWPTQWiC2sAGBHZbjsOjb74EUZgvCAfQ4dU9I/edit?usp=sharing">Community Group Brainstorm</a> or the <a target="_blank" href="https://www.facebook.com/groups/615063885673363/">Facebook group</a>.</p>
+          <p>If you have your own article idea that fits our audience, you can <%= link_to("pitch a new article", new_pitch_path) %> instead. </p>
+          <p>If you are looking for some additional inspiration, visit the <a target="_blank" href="https://www.facebook.com/groups/615063885673363/">Facebook group</a>.</p>
         </div>
         <div class="dashboard--articles--wrapper">
           <% if @user_pitches.present? %>
