--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -82,7 +82,7 @@
             <%= link_to("Review Onboarding", onboarding_path(:page => "welcome")) %>
             <%= link_to("Editor Pitches", pitches_path) %>
             <%= link_to "Pitch a new article", new_pitch_path %>
-            <% if current_user.admin? %>
+            <% if @user.admin? %>
               <%= link_to "Start a new article", new_post_path %>
             <% end %>
             <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
