--- a/app/assets/stylesheets/_newlayout.css.scss
+++ b/app/assets/stylesheets/_newlayout.css.scss
@@ -233,12 +233,20 @@
   }
 }
 
-.category a {
-  color: #65B19D;
-  margin-bottom: -20px;
-  margin: 0;
-  text-decoration: none;
-  font-size: 20px;
+.category {
+  a {
+    color: #65B19D;
+  }
+  .flex a {
+    margin-bottom: -20px;
+    margin: 0;
+    text-decoration: none;
+    font-size: 20px;
+  }
+  .pagination {
+    text-align: center;
+    margin-bottom: 1.2em;
+  }
 }
 
 @media (min-width: 640px) and (max-width: 800px) {
