pagination added to applies and css fix

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -311,6 +311,9 @@ footer {
     padding: 0 10px 20px 0;
     text-decoration: none;
   }
+  a {
+    color: #65B19D !important;
+  }
 }
 
 ///////////////////////////////////////////////////////////////////////////
