--- a/app/assets/stylesheets/_newlayout.css.scss
+++ b/app/assets/stylesheets/_newlayout.css.scss
@@ -244,6 +244,9 @@
   .pagination {
     text-align: center;
     margin-bottom: 1.2em;
+    a {
+      font-size: inherit !important;
+    }
   }
 }
 
