--- a/app/views/pages/criteria.html.erb
+++ b/app/views/pages/criteria.html.erb
@@ -8,7 +8,7 @@
   <p>Usually when an article has been approved, it'll be published right away. Sometimes, however, it will be delayed by a few days if there have been many recently published articles.</p>
 
   <p class="question">How long should my article be? </p>
-  <p>The perfect article length is around 1200 - 2000 words. Slightly shorter articles are okay if they are filled with lots of images/gifs. </p>
+  <p>The perfect article length is around 1000+ words. Slightly shorter articles are okay if they are filled with lots of images/gifs.</p>
 
   <p class="question">What does a published article consist of? </p>
   <p style="margin-bottom: 0;">A published article...
@@ -33,16 +33,16 @@
 
   <p class="question">How often should I submit an article?</p>
   <p>Preferably, you should be uploading articles at least once every two weeks so that our site can stay active. You can opt-in to bi-weekly article
-    assignments your <%= link_to edit_user_path("edit profile page", current_user) %>. There is no limit to how many articles you can submit per month, and we would love for you to write as many articles as you have time for.</p>
+    assignments your <%= link_to "edit profile page", edit_user_path(current_user) %>. There is no limit to how many articles you can submit per month, and we would love for you to write as many articles as you have time for.</p>
 
   <p class="question">How do I include images? </p>
-  <p> Please visit <a href="/writing-the-perfect-article">Writing The Perfect Article</a></p>
+  <p>Please visit <a href="/writing-the-perfect-article">Writing The Perfect Article</a></p>
 
   <p class="question">What should I write about? </p>
   <p>Please Visit <a href="/choosing-a-topic">Choosing A Topic</a> or claim a pitch from <%= link_to("Editor Pitches", pitches_path) %>.</p>
 
   <p class="question">What if I want to write something that doesn't fit a category? </p>
-  <p>If your article idea doesn't fit a category, it might not be right for The Teen Magazine, but you can reach out to any one of the editors through the Facebook group to ask about your idea.</p>
+  <p>If you want to pitch an article idea that doesn't fit a category, it might not be right for The Teen Magazine, but you can reach out to any one of the editors through the Facebook group to ask about your idea.</p>
 
   <p class="question">What if I have a friend that wants to write for The Teen Magazine?</p>
   <p>That's great! Tell your friend to apply at <a href="http://www.theteenmagazine.com/apply">www.theteenmagazine.com/apply</a>. We will then review your friend's application and send her an email with her account if she's accepted.</p>
