--- a/app/views/applies/index.html.erb
+++ b/app/views/applies/index.html.erb
@@ -7,7 +7,7 @@
         <% if @user.nil? %>
           <div class="card mb-3">
             <div class="card-body">
-              <h5 class="card-title"><%= link_to ("#{application.first_name} #{application.last_name}"), application %></h5>
+              <h5 class="card-title"><%= link_to ("#{application.first_name} #{application.last_name}"), application, :style => "color: #65B19D;" %></h5>
               <p class="card-text"><small class="text-muted">Submitted <%= application.created_at.strftime("%D") %></small></p>
               <p class="card-text"><%= application.description %></p>
             </div>
