--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
 <% @most_recent_review = @post.reviews.where.not(status: "In Progress").last %>
 <% if !@most_recent_review.nil? && (!@most_recent_review.try(:status).eql? "Rejected") %>
-  <%= render '/posts/banner_status' %>
+  <%= render '/posts/banner_status' %><br><br>
 <% elsif !(@post.is_published?) && @post.pitch.present? %>
   <% @rev = @post.reviews.where.not(status: "In Progress").last %>
   <% if @rev.present? %>
